# SimpleSysexxer

./: .gitignore  CMakeLists.txt  COPYRIGHT  README.md  SimpleSysexxer.pro
binincludes/translations/: de_DE.ts  en_EN.ts  fr_FR.ts
src/: MainWindow.ui  MidiIn.cpp  MidiIn.h  MidiOut.cpp  MidiOut.h  MyMainWindow.cpp  MyMainWindow.h  Versioning.h  main.cpp
